--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Adidas</title>
+  <title>adidas</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4247/4247490.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -14,9 +14,11 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" aria-label="Menú principal" role="navigation" aria-labelledby="navbar" aria-roledescription="navigation"> 
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" aria-label="Menú principal" role="navigation"
+    aria-labelledby="navbar" aria-roledescription="navigation">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Adidas</a>
+      <img src="public/img/logo.png" alt="Logo Adidas" width=auto height="27" class="d-inline-block align-text-top" style="filter: invert(1);" />
+      <a class="navbar-brand ms-2" href="#">adidas</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
         aria-controls="mainNav" aria-expanded="false" aria-label="Mostra el menú">
         <span class="navbar-toggler-icon"></span>
@@ -25,7 +27,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#services">Serveis</a></li>
           <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonis</a></li>
-          <li class="nav-item"><a class="nav-link" href="#faq">F.A.Q.</a></li>
+          <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contacte</a></li>
         </ul>
       </div>
@@ -33,7 +35,8 @@
   </nav>
 
   <!-- Hero Carousel -->
-  <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Presentació principal" role="region" aria-labelledby="heroCarousel" aria-roledescription="carousel">
+  <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" aria-label="Presentació principal" role="region"
+    aria-labelledby="heroCarousel" aria-roledescription="carousel">
     <div class="carousel-inner">
       <div class="carousel-item">
         <img src="public/img/banner2.jpg" class="d-block w-100" alt="Banner Football Collection">
@@ -62,7 +65,8 @@
   </div>
 
   <!-- Services Section -->
-  <section id="services" class="py-5 bg-light" aria-label="Serveis d'Adidas" role="region" aria-labelledby="services" aria-roledescription="section">
+  <section id="services" class="py-5 bg-light" aria-label="Serveis d'Adidas" role="region" aria-labelledby="services"
+    aria-roledescription="section">
     <div class="container text-center">
       <h2 class="mb-4">Els nostres serveis</h2>
       <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -114,7 +118,8 @@
   </section>
 
   <!-- Testimonials -->
-  <section id="testimonials" class="py-5 bg-secondary text-white"  aria-label="Testimonis d'Adidas" role="region" aria-labelledby="testimonials" aria-roledescription="section">
+  <section id="testimonials" class="py-5 bg-secondary text-white" aria-label="Testimonis d'Adidas" role="region"
+    aria-labelledby="testimonials" aria-roledescription="section">
     <div class="container">
       <h2 class="text-center mb-4">Què diuen de nosaltres</h2>
       <div class="row">
@@ -139,76 +144,91 @@
   </section>
 
   <!-- FAQ Section -->
-<section id="faq" class="py-5 bg-light" aria-label="Preguntes freqüents" role="region" aria-labelledby="faq" aria-roledescription="section">
-  <div class="container">
-    <h2 class="text-center mb-4">Preguntes Freqüents</h2>
-    <div class="accordion" id="accordionExample">
+  <section id="faq" class="py-5 bg-light" aria-label="Preguntes freqüents" role="region" aria-labelledby="faq"
+    aria-roledescription="section">
+    <div class="container">
+      <h2 class="text-center mb-4">Preguntes Freqüents</h2>
+      <div class="accordion" id="accordionExample">
 
-      <!-- FAQ 1 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-            aria-expanded="true" aria-controls="collapseOne">
-            Com puc personalitzar la roba esportiva del meu equip?
-          </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            <strong>Oferim un servei complet de personalització per a equips i clubs.</strong> A través del nostre configurador digital, pots escollir entre diversos estils de samarretes, pantalons, dessuadores i accessoris. Podràs afegir logotips, escuts, noms i números amb diferents tècniques com sublimació, brodat o estampació. També oferim assessorament creatiu si voleu un disseny exclusiu. Un cop confirmat el disseny, el nostre equip de producció s’encarrega de la fabricació amb materials d’alta qualitat.
+        <!-- FAQ 1 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne">
+              Com puc personalitzar la roba esportiva del meu equip?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>Oferim un servei complet de personalització per a equips i clubs.</strong> A través del nostre
+              configurador digital, pots escollir entre diversos estils de samarretes, pantalons, dessuadores i
+              accessoris. Podràs afegir logotips, escuts, noms i números amb diferents tècniques com sublimació, brodat
+              o estampació. També oferim assessorament creatiu si voleu un disseny exclusiu. Un cop confirmat el
+              disseny, el nostre equip de producció s’encarrega de la fabricació amb materials d’alta qualitat.
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- FAQ 2 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Quin tipus de roba i equipament teniu disponible?
-          </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            <strong>El nostre catàleg cobreix pràcticament totes les necessitats esportives.</strong> Oferim col·leccions per a futbol, bàsquet, handbol, running, fitness, i outdoor, entre d’altres. Disposem tant de línies professionals com recreatives, amb opcions per a homes, dones i nens. A més, pots trobar sabatilles tècniques, motxilles, balons, mitjons de compressió i altres accessoris pensats per optimitzar el rendiment i la comoditat durant la pràctica esportiva.
+        <!-- FAQ 2 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Quin tipus de roba i equipament teniu disponible?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>El nostre catàleg cobreix pràcticament totes les necessitats esportives.</strong> Oferim
+              col·leccions per a futbol, bàsquet, handbol, running, fitness, i outdoor, entre d’altres. Disposem tant de
+              línies professionals com recreatives, amb opcions per a homes, dones i nens. A més, pots trobar sabatilles
+              tècniques, motxilles, balons, mitjons de compressió i altres accessoris pensats per optimitzar el
+              rendiment i la comoditat durant la pràctica esportiva.
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- FAQ 3 -->
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Quin és el temps de lliurament per a comandes personalitzades?
-          </button>
-        </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-            <strong>El temps de lliurament depèn de diversos factors.</strong> Les comandes d’articles de catàleg tenen un termini habitual d’entre 3 i 7 dies laborables, segons la disponibilitat de l’estoc. En el cas de comandes personalitzades, el procés pot trigar entre 2 i 4 setmanes, ja que inclou fases de disseny, validació, producció i control de qualitat. Si necessiteu una entrega urgent, consulteu amb el nostre equip per veure si és possible fer una gestió prioritària. També podeu fer seguiment del vostre enviament des del nostre portal.
+        <!-- FAQ 3 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Quin és el temps de lliurament per a comandes personalitzades?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>El temps de lliurament depèn de diversos factors.</strong> Les comandes d’articles de catàleg
+              tenen un termini habitual d’entre 3 i 7 dies laborables, segons la disponibilitat de l’estoc. En el cas de
+              comandes personalitzades, el procés pot trigar entre 2 i 4 setmanes, ja que inclou fases de disseny,
+              validació, producció i control de qualitat. Si necessiteu una entrega urgent, consulteu amb el nostre
+              equip per veure si és possible fer una gestió prioritària. També podeu fer seguiment del vostre enviament
+              des del nostre portal.
+            </div>
           </div>
         </div>
-      </div>
 
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- Contact Form -->
-  <section id="contact" class="py-5" aria-label="Formulari de contacte" role="region" aria-labelledby="contact" aria-roledescription="section">
+  <section id="contact" class="py-5" aria-label="Formulari de contacte" role="region" aria-labelledby="contact"
+    aria-roledescription="section">
     <div class="container">
       <h2 class="text-center mb-4">Contacta amb nosaltres</h2>
       <form class="mx-auto" style="max-width: 600px;" aria-label="Formulari de contacte">
         <div class="mb-3">
           <label for="name" class="form-label">Nom</label>
-          <input type="text" class="form-control" id="name" required aria-required="true">
+          <input type="text" class="form-control" id="name" placeholder="John" aria-required="true">
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Correu electrònic</label>
-          <input type="email" class="form-control" id="email" required aria-required="true">
+          <input type="email" class="form-control" id="email" placeholder="johndoe@gmail.com" aria-required="true">
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Missatge</label>
-          <textarea class="form-control" id="message" rows="4" required aria-required="true"></textarea>
+          <textarea class="form-control" id="message" rows="4" placeholder="Escriu el teu missatge aquí..." aria-required="true"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
@@ -216,33 +236,38 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-primary text-white text-center py-4" aria-label="Peu de pàgina" role="contentinfo" aria-labelledby="footer" aria-roledescription="footer">
+  <footer class="bg-primary text-white text-center py-4" aria-label="Peu de pàgina" role="contentinfo"
+    aria-labelledby="footer" aria-roledescription="footer">
     <div class="container">
       <p>&copy; 2025 Adidas - Edu & Sergio. Activitat Widgets Aria Bootstrap.</p>
       <ul class="list-inline mb-0" id="xarxes-socials">
         <li class="list-inline-item">
-          <a href="https://www.instagram.com/adidas" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="Instagram (s'obre en una pestanya nova)">
+          <a href="https://www.instagram.com/adidas" target="_blank" rel="noopener noreferrer" class="text-white"
+            aria-label="Instagram (s'obre en una pestanya nova)">
             <i class="fab fa-instagram fa-lg"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://www.facebook.com/adidas" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="Facebook (s'obre en una pestanya nova)">
+          <a href="https://www.facebook.com/adidas" target="_blank" rel="noopener noreferrer" class="text-white"
+            aria-label="Facebook (s'obre en una pestanya nova)">
             <i class="fab fa-facebook fa-lg"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://twitter.com/adidas" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="Twitter (s'obre en una pestanya nova)">
+          <a href="https://twitter.com/adidas" target="_blank" rel="noopener noreferrer" class="text-white"
+            aria-label="Twitter (s'obre en una pestanya nova)">
             <i class="fab fa-twitter fa-lg"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://www.tiktok.com/@adidas" target="_blank" rel="noopener noreferrer" class="text-white" aria-label="TikTok (s'obre en una pestanya nova)">
+          <a href="https://www.tiktok.com/@adidas" target="_blank" rel="noopener noreferrer" class="text-white"
+            aria-label="TikTok (s'obre en una pestanya nova)">
             <i class="fab fa-tiktok fa-lg"></i>
           </a>
         </li>
-      </ul> 
+      </ul>
     </div>
-  </footer>  
+  </footer>
 
 </body>
 <script type="module" src="src/main.js"></script>
